plugins {
    id 'java'
    id "io.freefair.lombok" version "9.2.0"
    id "run.halo.plugin.devtools" version "0.7.0"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.release = 21
}

configurations.runtimeClasspath {
    exclude group: 'io.projectreactor'
    exclude group: 'org.reactivestreams'
    exclude group: 'org.springframework'
    exclude group: 'org.springframework.boot'
    exclude group: 'org.springdoc'
    exclude group: 'io.swagger.core.v3'
    exclude group: 'com.fasterxml.jackson.core'
    // Halo 2.26 provides Jackson 3 as well. Bundling it splits class identity
    // between the host and plugin classloaders, even when versions match.
    exclude group: 'tools.jackson.core'
    exclude group: 'org.slf4j'
    exclude group: 'io.micrometer'
    exclude group: 'com.squareup.okhttp3'
    exclude group: 'com.squareup.okio'
}

dependencies {
    implementation platform('run.halo.tools.platform:plugin:2.23.0')
    implementation platform("org.springframework.ai:spring-ai-bom:2.0.0")
    implementation project(':api')

    implementation 'org.xerial:sqlite-jdbc:3.53.2.0'
    implementation 'org.springframework.ai:spring-ai-model'

    compileOnly 'run.halo.app:api'

    testImplementation 'run.halo.app:api'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

// Opt-in: exercises retained SQLite data rather than running during every plugin build.
tasks.register('usageScaleValidation', Test) {
    description = 'Validate usage statistics with one million calls and five million executions'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
    environment 'AI_USAGE_BENCHMARK', 'true'
    filter { includeTestsMatching '*UsageStatisticsScaleBenchmarkTest' }
    testLogging { events 'passed', 'failed'; showStandardStreams = true }
}

tasks.register('processUiResources', Copy) {
    from project(':ui').layout.buildDirectory.dir('dist')
    into layout.buildDirectory.dir('resources/main/ui')
    dependsOn project(':ui').tasks.named('assemble')
    shouldRunAfter tasks.named('processResources')
}

tasks.named('classes') {
    dependsOn tasks.named('processUiResources')
}

tasks.named('generatePluginComponentsIdx') {
    notCompatibleWithConfigurationCache('This task invokes "Task.project" at execution time, which is not supported with configuration cache.')
}

tasks.named('jar') {
    archiveBaseName = "plugin-ai-foundation"
    dependsOn(':api:jar')
}

haloPlugin {
    openApi {
        outputDir = file("$rootDir/api-docs/openapi/v3_0")
        groupingRules {
            aiFoundationApis {
                displayName = "AI Foundation APIs"
                pathsToMatch = ["/apis/console.api.aifoundation.halo.run/**", "/apis/aifoundation.halo.run/**"]
            }
        }
        groupedApiMappings = [
            '/v3/api-docs/aiFoundationApis': 'aiFoundationApis.json'
        ]
        generator {
            outputDir = file("${rootDir}/ui/src/api/generated")
            additionalProperties = [
                useES6: true,
                useSingleRequestParameter: true,
                withSeparateModelsAndApi: true,
                apiPackage: "api",
                modelPackage: "models"
            ]
            typeMappings = [
                set: "Array"
            ]
        }
    }
}

halo {
    version = '2.26'
}

def generatedOpenApi = layout.projectDirectory.file(
    '../api-docs/openapi/v3_0/aiFoundationApis.json')

// Halo's documentation task starts on a random port. Normalize only its generated server block so
// repeated client generation is deterministic; API clients still receive the Console axios base.
def normalizeGeneratedOpenApiServers = tasks.register('normalizeGeneratedOpenApiServers') {
    dependsOn tasks.named('generateOpenApiDocs')
    outputs.upToDateWhen { false }
    doLast {
        def spec = generatedOpenApi.asFile
        def original = spec.getText('UTF-8')
        if (original.contains('"url" : "/"')) {
            return
        }
        def generatedServerPattern = '(?s)"servers"\\s*:\\s*\\[\\s*\\{\\s*"url"\\s*:' +
            '\\s*"[^"]+"\\s*,\\s*"description"\\s*:\\s*"Generated server url"\\s*\\}\\s*\\]'
        def generatedServer = ~generatedServerPattern
        def normalized = original.replaceFirst(generatedServer, '''"servers" : [ {
    "url" : "/",
    "description" : "Generated server url"
  } ]''')
        if (normalized == original) {
            throw new GradleException('Generated OpenAPI server block was not found')
        }
        spec.setText(normalized, 'UTF-8')
    }
}

afterEvaluate {
    tasks.named('generateApiClient') {
        dependsOn normalizeGeneratedOpenApiServers
    }
}

// Unit tests use one classloader and cannot detect host/plugin Jackson duplication.
tasks.register('verifyHostProvidedJackson') {
    group = 'verification'
    description = 'Ensures Jackson core classes are supplied only by Halo at runtime.'
    doLast {
        def bundled = configurations.runtimeClasspath.resolvedConfiguration.resolvedArtifacts.findAll {
            it.moduleVersion.id.group in ['com.fasterxml.jackson.core', 'tools.jackson.core']
        }
        if (!bundled.empty) {
            throw new GradleException("Host-provided Jackson must not be bundled: ${bundled*.moduleVersion*.id}")
        }
    }
}

tasks.named('check') {
    dependsOn tasks.named('verifyHostProvidedJackson')
}
